[gd_scene load_steps=5 format=3 uid="uid://dh658r8myl8sb"]

[ext_resource type="Script" uid="uid://bsywyyjbn3xnu" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://bw4dmcp41251k" path="res://assets/icons/arrow_left.svg" id="2_h2yge"]
[ext_resource type="Texture2D" uid="uid://cwlb48sr0ci2v" path="res://assets/icons/arrow_right.svg" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://c7ss13uxfgfqe" path="res://assets/icons/today.svg" id="4_1bvp3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="SecondTimer" type="Timer" parent="."]
autostart = true
ignore_time_scale = true

[node name="TabContainer" type="TabContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 3
clip_tabs = false

[node name="TAB_INPUT" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="DateContainer" type="HBoxContainer" parent="TabContainer/TAB_INPUT"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="DateBackButton" type="Button" parent="TabContainer/TAB_INPUT/DateContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
icon = ExtResource("2_h2yge")
icon_alignment = 1
expand_icon = true

[node name="DateForwardButton" type="Button" parent="TabContainer/TAB_INPUT/DateContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
icon = ExtResource("3_1bvp3")
icon_alignment = 1
expand_icon = true

[node name="LeftSpacer" type="Control" parent="TabContainer/TAB_INPUT/DateContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DateLabel" type="Label" parent="TabContainer/TAB_INPUT/DateContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "01.01.2000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightSpacer" type="Control" parent="TabContainer/TAB_INPUT/DateContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DateTodayButton" type="Button" parent="TabContainer/TAB_INPUT/DateContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "DATE_TODAY_BUTTON_TOOLTIP"
icon = ExtResource("4_1bvp3")
icon_alignment = 1
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/TAB_INPUT"]
layout_mode = 2
size_flags_vertical = 3

[node name="RowContainer" type="VBoxContainer" parent="TabContainer/TAB_INPUT/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrentDay" type="RichTextLabel" parent="TabContainer/TAB_INPUT"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
focus_mode = 2
bbcode_enabled = true
text = "Work done: [color=orange]0h 25m[/color] ([color=orange]0h 25m[/color] this week, [color=orange]0h 25m[/color] per day)
Time left: [color=orange]2h 45m[/color]"
context_menu_enabled = true
selection_enabled = true

[node name="InputContainer" type="HBoxContainer" parent="TabContainer/TAB_INPUT"]
layout_mode = 2

[node name="TimeDiffLabel" type="Label" parent="TabContainer/TAB_INPUT/InputContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Input" type="LineEdit" parent="TabContainer/TAB_INPUT/InputContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
keep_editing_on_text_submit = true

[node name="TAB_GROUPED" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="GroupedDay" type="RichTextLabel" parent="TabContainer/TAB_GROUPED"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
context_menu_enabled = true
selection_enabled = true

[node name="TAB_TODO" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Button" type="Button" parent="TabContainer/TAB_TODO"]
layout_mode = 2
text = "+"

[node name="TodoTree" type="Tree" parent="TabContainer/TAB_TODO"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
auto_tooltip = false

[node name="TAB_SETTINGS" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 3

[node name="HBoxContainer6" type="HBoxContainer" parent="TabContainer/TAB_SETTINGS"]
layout_mode = 2

[node name="SelectedLangugageLabel" type="Label" parent="TabContainer/TAB_SETTINGS/HBoxContainer6"]
layout_mode = 2
text = "LANGUAGE_LABEL"

[node name="SelectedLanguageButton" type="OptionButton" parent="TabContainer/TAB_SETTINGS/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/TAB_SETTINGS"]
layout_mode = 2

[node name="DailyWorkingHoursLabel" type="Label" parent="TabContainer/TAB_SETTINGS/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "Arbeitszeit"

[node name="DailyWorkingHours" type="HSlider" parent="TabContainer/TAB_SETTINGS/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.5
max_value = 24.0
step = 0.5
value = 8.0

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/TAB_SETTINGS"]
layout_mode = 2

[node name="DateFormatLabel" type="Label" parent="TabContainer/TAB_SETTINGS/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 1
text = "DATE_FORMAT_LABEL"
vertical_alignment = 1

[node name="DateFormat" type="LineEdit" parent="TabContainer/TAB_SETTINGS/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "DATE_FORMAT_TOOLTIP"
text = "%Y-%m-%d (%D)"
placeholder_text = "%Y-%m-%d (%D)"

[node name="DateFormatPreviewLabel" type="Label" parent="TabContainer/TAB_SETTINGS/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/TAB_SETTINGS"]
layout_mode = 2

[node name="RoundingLabel" type="Label" parent="TabContainer/TAB_SETTINGS/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 1
text = "ROUNDING_LABEL"
vertical_alignment = 1

[node name="RoundingMinutes" type="SpinBox" parent="TabContainer/TAB_SETTINGS/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 60.0
value = 15.0
suffix = "m"

[node name="RoundingGraceLabel" type="Label" parent="TabContainer/TAB_SETTINGS/HBoxContainer3"]
layout_mode = 2
tooltip_text = "ROUNDING_GRACE_TOOLTIP"
mouse_filter = 0
text = "ROUNDING_GRACE_LABEL"

[node name="RoundingGraceMinutes" type="SpinBox" parent="TabContainer/TAB_SETTINGS/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "ROUNDING_GRACE_TOOLTIP"
max_value = 60.0
value = 5.0
suffix = "m"

[node name="DiffSecondsToggle" type="CheckButton" parent="TabContainer/TAB_SETTINGS"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "DIFF_SECONDS_TOGGLE"

[node name="HBoxContainer4" type="HBoxContainer" parent="TabContainer/TAB_SETTINGS"]
layout_mode = 2

[node name="TextColorPickerLabel" type="Label" parent="TabContainer/TAB_SETTINGS/HBoxContainer4"]
layout_mode = 2
text = "TEXT_COLOR_PICKER_LABEL"

[node name="TextColorPicker" type="ColorPickerButton" parent="TabContainer/TAB_SETTINGS/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = false
text = "X"
flat = true
color = Color(0.936265, 0.936265, 0.936265, 1)
edit_alpha = false

[node name="TimeColorPickerLabel" type="Label" parent="TabContainer/TAB_SETTINGS/HBoxContainer4"]
layout_mode = 2
text = "TIME_COLOR_PICKER_LABEL"

[node name="TimeColorPicker" type="ColorPickerButton" parent="TabContainer/TAB_SETTINGS/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = false
text = "x"
flat = true
color = Color(0.86, 0.573333, 0, 1)

[node name="PauseColorPickerLabel" type="Label" parent="TabContainer/TAB_SETTINGS/HBoxContainer4"]
layout_mode = 2
text = "PAUSE_COLOR_PICKER_LABEL"

[node name="PauseColorPicker" type="ColorPickerButton" parent="TabContainer/TAB_SETTINGS/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = false
text = "x"
flat = true
color = Color(0.46, 0.46, 0.46, 1)

[node name="TabsMoveableToggle" type="CheckButton" parent="TabContainer/TAB_SETTINGS"]
layout_mode = 2
text = "TABS_MOVEABLE_TOGGLE"

[node name="TabLabelContainer" type="HBoxContainer" parent="TabContainer/TAB_SETTINGS"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="TabContainer/TAB_SETTINGS"]
layout_mode = 2

[node name="LeftPad" type="Control" parent="TabContainer/TAB_SETTINGS/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OpenUserFolderButton" type="Button" parent="TabContainer/TAB_SETTINGS/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
text = "OPEN_USER_FOLDER_BUTTON"

[node name="RightPad" type="Control" parent="TabContainer/TAB_SETTINGS/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="timeout" from="SecondTimer" to="." method="_on_second_timer_timeout"]
[connection signal="pressed" from="TabContainer/TAB_INPUT/DateContainer/DateBackButton" to="." method="_on_date_back_button_pressed"]
[connection signal="pressed" from="TabContainer/TAB_INPUT/DateContainer/DateForwardButton" to="." method="_on_date_forward_button_pressed"]
[connection signal="pressed" from="TabContainer/TAB_INPUT/DateContainer/DateTodayButton" to="." method="_on_date_today_button_pressed"]
[connection signal="text_submitted" from="TabContainer/TAB_INPUT/InputContainer/Input" to="." method="_on_input_text_submitted"]
[connection signal="item_selected" from="TabContainer/TAB_SETTINGS/HBoxContainer6/SelectedLanguageButton" to="." method="_on_selected_language_button_item_selected"]
[connection signal="value_changed" from="TabContainer/TAB_SETTINGS/HBoxContainer/DailyWorkingHours" to="." method="_on_daily_working_hours_value_changed"]
[connection signal="text_changed" from="TabContainer/TAB_SETTINGS/HBoxContainer2/DateFormat" to="." method="_on_date_format_text_changed"]
[connection signal="value_changed" from="TabContainer/TAB_SETTINGS/HBoxContainer3/RoundingMinutes" to="." method="_on_rounding_minutes_value_changed"]
[connection signal="value_changed" from="TabContainer/TAB_SETTINGS/HBoxContainer3/RoundingGraceMinutes" to="." method="_on_rounding_grace_minutes_value_changed"]
[connection signal="toggled" from="TabContainer/TAB_SETTINGS/DiffSecondsToggle" to="." method="_on_diff_seconds_toggle_toggled"]
[connection signal="toggled" from="TabContainer/TAB_SETTINGS/TabsMoveableToggle" to="." method="_on_tabs_moveable_toggled"]
[connection signal="pressed" from="TabContainer/TAB_SETTINGS/HBoxContainer5/OpenUserFolderButton" to="." method="_on_open_user_folder_button_pressed"]
